dark mode fixed

--- a/ghi/app/src/App.css
+++ b/ghi/app/src/App.css
@@ -48,3 +48,7 @@
     width: 100%;
     position: absolute;
 }
+
+a{
+    text-decoration:none;  
+}
